<?xml version="1.0"?>
<package format="2">
  <name>lidar_processor</name>
  <version>0.0.1</version>
  <description>General point cloud processor ROS package</description>
  <maintainer email="casparvv52@gmail.com">Caspar</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>

